<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2012 Andrew Neal
  Copyright (C) 2014 The CyanogenMod Project
  Copyright (C) 2017-2020 The LineageOS Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/settings_general_category">

        <!-- Show Lyrics -->
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="show_lyrics"
            android:title="@string/settings_show_lyrics_title"
            android:summary="@string/settings_show_lyrics_summary" />

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="shake_to_play"
            android:title="@string/settings_shake_to_play"
            android:summary="@string/settings_shake_to_play_summary" />

    </androidx.preference.PreferenceCategory>

    <!-- Storage catetory -->
    <androidx.preference.PreferenceCategory android:title="@string/settings_storage_category">

        <!-- Delete cache -->
        <androidx.preference.Preference
            android:key="delete_cache"
            android:summary="@string/settings_delete_cache_summary"
            android:title="@string/settings_delete_cache_title" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
