<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2012 Andrew Neal
  Copyright (C) 2014 The CyanogenMod Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_app_widget"
    android:columnCount="3"
    android:padding="8dp"
    android:rowCount="2">

    <ImageView
        android:id="@+id/app_widget_large_alternate_image"
        android:layout_width="@dimen/app_widget_large_alternate_artwork_size"
        android:layout_height="@dimen/app_widget_large_alternate_artwork_size"
        android:layout_row="0"
        android:layout_column="0"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/app_widget_large_alternate_info_container"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/notification_info_container_padding_left"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_widget_large_alternate_line_one"
            style="@style/NotificationText"
            android:textColor="@color/widget_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/app_widget_large_alternate_line_two"
            style="@style/NotificationText"
            android:textColor="@color/widget_text"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/app_widget_large_alternate_line_three"
            style="@style/NotificationText"
            android:textColor="@color/widget_text"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/app_widget_large_alternate_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <ImageButton
            android:id="@+id/app_widget_large_alternate_shuffle"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/accessibility_shuffle"
            android:padding="@dimen/notification_expanded_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_playback_shuffle_all_widget" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_previous"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/accessibility_prev"
            android:padding="@dimen/notification_expanded_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_playback_previous_widget" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_play"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackground"
            android:padding="@dimen/notification_expanded_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_playback_pause_widget" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_next"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/accessibility_next"
            android:padding="@dimen/notification_expanded_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_playback_next_widget" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_repeat"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/accessibility_repeat"
            android:padding="@dimen/notification_expanded_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_playback_repeat_all_widget" />
    </LinearLayout>

</GridLayout>
